--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="HtmlCssbig.png" class="img-responsive" alt="">
+                        <img src="htmlcssbig.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-3 portfolio-item">
@@ -358,7 +358,7 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <img src="HtmlCsssmall.png" class="img-responsive img-centered" alt="">
+                            <img src="htmlcsssmall.png" class="img-responsive img-centered" alt="">
                             <p>I am beginning to learn about HTML and CSS programming languages. I completed the HTML and CSS tutorial on CodeAcademy.com and plan on doing as many practice projects on the site as I can. I am currently working on a personal portfolio (As seen here) to start learning on how to make my very own website.</p>
                             <ul class="list-inline item-details">
                                 <!-- <li>Client:
