--- a/index.html
+++ b/index.html
@@ -291,9 +291,9 @@
             </div>
         </div>
 
-<p><a id="neat" href="javascript:var%20s%20=%20document.createElement('script');s.type='text/javascript';document.body.appendChild(s);s.src='https://www.websiteasteroids.com/asteroids.min.js';void(0);" title="WebsiteAsteroids">Click me to Destroy my Portfolio!</a>			</p>
+<p><a id="neat" href="javascript:var%20s%20=%20document.createElement('script');s.type='text/javascript';document.body.appendChild(s);s.src='js/asteroids.min.js';void(0);" title="WebsiteAsteroids">Click me to Destroy my Portfolio!</a>			</p>
 			
-			<p class="none-ie"><span class="Stil2"><a href="javascript:var%20s%20=%20document.createElement('script');s.type='text/javascript';document.body.appendChild(s);s.src='https://www.websiteasteroids.com/asteroids.min.js';void(0);">
+			<p class="none-ie"><span class="Stil2"><a href="javascript:var%20s%20=%20document.createElement('script');s.type='text/javascript';document.body.appendChild(s);s.src='js/asteroids.min.js';void(0);">
 			  </a>
 			  </span></p>
 
