adding more text

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                             <h2>Project Title</h2>
                             <hr class="star-primary">
                             <img src="pvpgdsmall.png" class="img-responsive img-centered" alt="">
-                            <p>I am currently employed at PvP Gamers Dungeon which is gaming center where customers pay for hours to play video games on the newest consoles and high end PC's. While working there I handle customer purchaces and services like if any customers need help using our gaming consoles or computers. For information about how I got started at PvP and what I learned there, <br><br> I wrote a blog post about working at PvP Gamers Dungeon which can be found <a href="www.uit.org">NOT HERE YET</a>.</p>
+                            <p>I am currently employed at PvP Gamers Dungeon which is gaming center where customers pay for hours to play video games on the newest consoles and high end PC's. While working there I handle customer purchaces and services like if any customers need help using our gaming consoles or computers. For information about how I got started at PvP and what I learned there, <br><br> I wrote a blog post about working at PvP Gamers Dungeon which can be found <a href="www.uitstartup.org">NOT HERE YET</a>.</p>
                             <!-- <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
