--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <script src="js/konami.js"></script>
 <script type="text/javascript">
-	var easter_egg = new Konami('https://help.github.com/articles/adding-an-existing-project-to-github-using-the-command-line/');
+	var easter_egg = new Konami("https://help.github.com/articles/adding-an-existing-project-to-github-using-the-command-line/");
 </script>
 
 </head>
